Implement real weather data and improve location handling
- Add weather API route (/api/weather) with OpenWeatherMap integration
- Replace hardcoded 22°C with real weather data from API
- Improve location detection: remove default fallback, show manual input on failure
- Add weather state management to HeroSection component
- Add missing translation keys for locationFailed in zh and en locales
- Weather API supports both real data (with API key) and fallback data
- Manual location input now triggers weather fetch for custom locations

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2840,6 +2840,7 @@
     "nextTimezone": "Next Timezone",
     "locationPlaceholder": "e.g., Tokyo, Osaka...",
     "enterCustomLocation": "Enter Custom Location",
+    "locationFailed": "Location detection failed",
     "enterLocation": "Enter Manually",
     "weatherSunny": "Sunny",
     "locationPermissionPrompt": "Allow location access for precise location",
